# story-crafter-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
story_crafter_agent/: __init__.py  agent.py  fast_api_app.py
story_crafter_agent/cache/books/: 2097.txt
story_crafter_agent/cache/exports/: 22373_Book_22373_chapters_1-6.md
story_crafter_agent/prompts/: README.md  formatter_agent.md  root_agent_mvp.md  storyteller_agent.md
story_crafter_agent/sub_agents/: __init__.py  formatter_agent.py  illustration_agent.py  library_agent.py  personalization_agent.py  storyteller_agent.py
story_crafter_agent/tools/: __init__.py  formatting_tools.py  image_generation_tools.py  library_tools.py  personalization_tools.py  storyteller_tools.py
